src/test/ui/transmutability/enums/should_respect_endianness.stderr
error[E0277]: the trait bound `Unexpected: BikeshedIntrinsicFrom<Src, assert::Context, true, true, true, true>` is not satisfied
  --> $DIR/should_respect_endianness.rs:32:36
   |
LL |     assert::is_transmutable::<Src, Unexpected>();
   |                                    ^^^^^^^^^^ the trait `BikeshedIntrinsicFrom<Src, assert::Context, true, true, true, true>` is not implemented for `Unexpected`
   |
note: required by a bound in `is_transmutable`
  --> $DIR/should_respect_endianness.rs:15:14
   |
LL |     pub fn is_transmutable<Src, Dst>()
   |            --------------- required by a bound in this
LL |     where
LL |         Dst: BikeshedIntrinsicFrom<Src, Context, true, true, true, true>
   |              ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ required by this bound in `is_transmutable`

error: aborting due to previous error

For more information about this error, try `rustc --explain E0277`.
